# sosyalmedya

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.json
app/: config.py  main.py
app/api/routes/: admin.py  health.py  internal.py  oauth.py  telegram.py
app/db/: models.py  session.py
app/providers/: base.py  llm_client.py  ollama_client.py  registry.py
app/providers/prompt/: base.py  llm.py  ollama.py
app/providers/trend/: base.py  llm.py  ollama.py
app/providers/video/: base.py
app/publishers/: base.py  common.py  meta.py  registry.py  tiktok.py  youtube.py
app/schemas/: api.py
app/services/: account_service.py  account_validation_service.py  aider_service.py  approval_service.py  benchmark_service.py  bootstrap.py  cover_workflow_service.py  edit_service.py  narration_service.py  oauth_service.py  orchestrator.py  retention_service.py  telegram_bot.py  telegram_webhook_service.py  video_composition_service.py  web_research_service.py
app/utils/: security.py
app/workers/: cleanup.py  scheduler.py
deploy/: .env.prod.example  railway.env.example
docker/aider/: .aider.conf.yml  .aider.model.settings.yml  entrypoint.sh  worker.py
docker/ollama/: pull-models.sh
tests/: test_aider_and_registry.py  test_approval_service.py  test_config_validation.py  test_oauth_and_validation.py  test_publishers_and_webhook.py  test_retention_service.py  test_telegram_bot.py  test_video_composition.py  test_web_research_service.py
