[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-ai-video-automation"
version = "0.1.0"
description = "Production-oriented Telegram approval workflow for AI-driven niche discovery, prompt generation, video generation, and social publishing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.4,<4.0.0",
    "cryptography>=42.0.8,<43.0.0",
    "edge-tts>=6.1.18,<7.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.1,<1.0.0",
    "psycopg[binary]>=3.2.3,<4.0.0",
    "pydantic-settings>=2.7.1,<3.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3,<9.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
